[package]
name = "latest_paper"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
paper-mc = { git = "https://github.com/ShayBox/paper-mc-rs.git", version = "0.1.0" }
tokio = "1.21.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
