[package]
name = "latest-paper"
version = "2.0.1"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
description = "Rust CLI wrapper to download PaperMC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
paper-mc = { git = "https://github.com/ShayBoxs-Forks/paper-mc-rs.git", version = "0.1.0" }
tokio = "1.23.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
