[package]
name = "latest-paper"
version = "2.1.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
description = "Command line wrapper to download PaperMC"
readme = "README.md"
repository = "https://github.com/ShayBox/LatestPaper"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
paper-mc = { git = "https://github.com/ShayBoxs-Forks/paper-mc-rs.git" }
tokio = { version = "1.28", features = ["macros"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
